Update readme & description.

--- a/app/views/templates/sidebar.hbs
+++ b/app/views/templates/sidebar.hbs
@@ -6,10 +6,5 @@
   </div>
 {{else}}
   Tweet your brunch is an example app
-  built with <a href="http://brunch.io/">Brunch</a>,
-  <a href="https://github.com/paulmillr/brunch-with-chaplin">Brunch with Chaplin</a>,
-  <a href="http://backbonejs.org/">Backbone.js</a>,
-  <a href="http://coffeescript.org/">CoffeeScript</a>,
-  <a href="http://jade-lang.com/">Jade</a> and
-  <a href="https://github.com/LearnBoost/stylus">Stylus</a>.
+  built with <a href="http://brunch.io/">Brunch</a> &amp; <a href="https://github.com/paulmillr/brunch-with-chaplin">Brunch with Chaplin</a>
 {{/if}}
