--- a/app/views/templates/navigation.hbs
+++ b/app/views/templates/navigation.hbs
@@ -4,8 +4,13 @@
       <div class="nav-collapse">
         <ul class="nav">
           {{#each items}}
-            <li>
-              <a href="#{{this.href}}">{{this.title}}</a>
+            <li class="nav-item">
+              <a class="nav-item-link" href="#/{{this.href}}">
+                <div class="nav-item-icon-container">
+                  <span class="nav-item-icon"></span>
+                </div>
+                <span class="nav-item-title">{{this.title}}</span>
+              </a>
             </li>
           {{/each}}
         </ul>
