--- a/app/views/templates/tweet.hbs
+++ b/app/views/templates/tweet.hbs
@@ -1,6 +1,6 @@
 <div class="tweet-content">
   <header class="tweet-header">
-    <a href="#@{{user.screenName}}">
+    <a href="http://twitter.com/{{user.screenName}}">
       <img class="avatar" src="{{user.profileImageUrl}}" alt="Paul Miller" />
       <strong class="tweet-author-full-name">
         {{user.name}}
