--- a/app/views/templates/sidebar.hbs
+++ b/app/views/templates/sidebar.hbs
@@ -1,20 +1,18 @@
 {{#if_logged_in}}
-  {{#with_user}}
-    <div class="account-summary-container">
-      <div class="account-summary">
-  	    <img class="account-summary-avatar avatar size32" src="{{profile_image_url}}" alt="{{name}}">
-  	    <div class="account-summary-content">
-    	    <strong class="account-summary-full-name">{{name}}</strong>
-    	    <small class="account-summary-metadata">View my profile page</small>
-  	    </div>
-      </div>
+  <div class="account-summary-container">
+    <div class="account-summary">
+	    <img class="account-summary-avatar avatar size32" src="{{profile_image_url}}" alt="{{name}}">
+	    <div class="account-summary-content">
+  	    <strong class="account-summary-full-name">{{name}}</strong>
+  	    <small class="account-summary-metadata">View my profile page</small>
+	    </div>
     </div>
-    <ul class="stats">
-      <li class="stat-tweets"><strong>{{statuses_count}}</strong> tweets</li>
-      <li class="stat-following"><strong>{{friends_count}}</strong> following</li>
-      <li class="stat-followers"><strong>{{followers_count}}</strong> followers</li>
-    </ul>
-  {{/with_user}}
+  </div>
+  <ul class="stats">
+    <li class="stat-tweets"><strong>{{statuses_count}}</strong> tweets</li>
+    <li class="stat-following"><strong>{{friends_count}}</strong> following</li>
+    <li class="stat-followers"><strong>{{followers_count}}</strong> followers</li>
+  </ul>
   <div class="composable-tweet">
     <textarea class="composable-tweet-text" placeholder="What's happening?"></textarea>
     <div class="composable-tweet-info">
@@ -23,6 +21,5 @@
     </div>
   </div>
 {{else}}
-  Tweet your brunch is an example app
-  built with <a href="http://brunch.io/">Brunch</a> &amp; <a href="https://github.com/paulmillr/brunch-with-chaplin">Brunch with Chaplin</a>
+  Tweet your brunch is a simple twitter client built with <a href="http://brunch.io/">Brunch</a> &amp; <a href="https://github.com/paulmillr/brunch-with-chaplin">Brunch with Chaplin</a>.
 {{/if_logged_in}}
