Slightly fix design.

--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -88,6 +88,9 @@ h1
     width: 100%
     height: 100px
 
+.app-description
+  padding: 12px
+
 .account-summary
   position: relative
   padding-bottom: 0
@@ -145,7 +148,7 @@ h1
 
 // Main content.
 .login-note
-  padding: 10px
+  padding: 0 12px 12px 12px
 
 .sign-in-button
   margin-top: 10px
