--- a/app/views/templates/sidebar.hbs
+++ b/app/views/templates/sidebar.hbs
@@ -21,5 +21,7 @@
     </div>
   </div>
 {{else}}
-  Tweet your brunch is a simple twitter client built with <a href="http://brunch.io/">Brunch</a> &amp; <a href="https://github.com/paulmillr/brunch-with-chaplin">Brunch with Chaplin</a>.
+  <div class="app-description">
+    Tweet your brunch is a simple twitter client built with <a href="http://brunch.io/">Brunch</a> &amp; <a href="https://github.com/paulmillr/brunch-with-chaplin">Brunch with Chaplin</a>.
+  </div>
 {{/if_logged_in}}
