--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -4009,6 +4009,7 @@ body{padding-top:40px;background-color:#352726}
 .nav-item-title{margin-left:26px;font-size:12px}
 h1{padding-bottom:5px}
 .sidebar textarea{width:100%;height:100px}
+.app-description{padding:12px}
 .account-summary{position:relative;padding-bottom:0;}
 .account-summary-container{padding:12px}
 .account-summary-avatar{top:0;left:0}
@@ -4025,7 +4026,7 @@ h1{padding-bottom:5px}
 .composable-tweet-text{padding:10px}
 .composable-tweet-character-count{color:#999;}
 .composable-tweet-character-count-invalid{color:#b83535}
-.login-note{padding:10px}
+.login-note{padding:0 12px 12px 12px}
 .sign-in-button{margin-top:10px;cursor:pointer}
 .tweets-header{padding:0 0 6px 12px;border-bottom:1px solid #e8e8e8}
 .tweet{position:relative;min-height:75px;padding:9px 12px 9px;border-bottom:1px solid #e8e8e8;}
