Re-add correct navigation route.

--- a/app/views/templates/navigation.hbs
+++ b/app/views/templates/navigation.hbs
@@ -5,7 +5,7 @@
         <ul class="nav">
           {{#each items}}
             <li class="nav-item">
-              <a class="nav-item-link" href="#/{{this.href}}">
+              <a class="nav-item-link" href="#{{this.href}}">
                 <div class="nav-item-icon-container">
                   <span class="nav-item-icon"></span>
                 </div>
