Use separate model & composite view for status creation.

--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -133,7 +133,7 @@ h1
       font-size: 14px
       color: lightblack
 
-.composable-tweet
+.status
   padding: 12px
   border-radius: 6px
   background: #f8f8f8
