--- a/app/views/templates/sidebar.hbs
+++ b/app/views/templates/sidebar.hbs
@@ -13,13 +13,7 @@
     <li class="stat-following"><strong>{{friends_count}}</strong> following</li>
     <li class="stat-followers"><strong>{{followers_count}}</strong> followers</li>
   </ul>
-  <div class="composable-tweet">
-    <textarea class="composable-tweet-text" placeholder="What's happening?"></textarea>
-    <div class="composable-tweet-info">
-      <span class="composable-tweet-character-count">140</span>
-      <button class="composable-tweet-send-button btn btn-primary" disabled>Tweet</button>
-    </div>
-  </div>
+  <div class="status-container" id="status-container"></div>
 {{else}}
   <div class="app-description">
     Tweet your brunch is a simple twitter client built with <a href="http://brunch.io/">Brunch</a> &amp; <a href="https://github.com/paulmillr/brunch-with-chaplin">Brunch with Chaplin</a>.
