--- a/app/views/templates/tweet.hbs
+++ b/app/views/templates/tweet.hbs
@@ -1,12 +1,12 @@
 <div class="tweet-content">
   <header class="tweet-header">
-    <a href="http://twitter.com/{{user.screenName}}">
-      <img class="avatar" src="{{user.profileImageUrl}}" alt="Paul Miller" />
+    <a href="http://twitter.com/{{user.screen_name}}">
+      <img class="avatar" src="{{user.profile_image_url}}" alt="Paul Miller" />
       <strong class="tweet-author-full-name">
         {{user.name}}
       </strong>
       <span class="username tweet-author-username">
-        @{{user.screenName}}
+        @{{user.screen_name}}
       </span>
     </a>
   </header>
