--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -3990,7 +3990,7 @@ a.thumbnail:hover {
 }
 *{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}
 body{padding-top:40px;background-color:#352726}
-.module{margin-bottom:10px;line-height:16px;border:1px solid rgba(0,0,0,0.10);-webkit-border-radius:6px;-moz-border-radius:6px;border-radius:6px;border-top-left-radius:13;background-color:#fff;background-clip:padding-box}
+.module{margin-bottom:10px;line-height:16px;border:1px solid rgba(0,0,0,0.10);-webkit-border-radius:6px;-moz-border-radius:6px;border-radius:6px;border-top-left-radius:13;background-color:#fff;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box}
 .avatar{position:absolute;top:12px;left:12px;width:48px;height:48px;-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px}
 .size32{width:32px;height:32px}
 .username{color:#999}
@@ -4021,11 +4021,11 @@ h1{padding-bottom:5px}
 .stats > li:first-child{padding-left:0}
 .stats > li:last-child{border-right:0}
 .stats > li strong{display:block;font-size:14px;color:#333}
-.composable-tweet{padding:12px;-webkit-border-radius:6px;-moz-border-radius:6px;border-radius:6px;background:#f8f8f8;}
-.composable-tweet-info{text-align:right}
-.composable-tweet-text{padding:10px}
-.composable-tweet-character-count{color:#999;}
-.composable-tweet-character-count-invalid{color:#b83535}
+.status{padding:12px;-webkit-border-radius:6px;-moz-border-radius:6px;border-radius:6px;background:#f8f8f8;}
+.status-info{text-align:right}
+.status-text{padding:10px}
+.status-character-count{color:#999;}
+.status-character-count-invalid{color:#b83535}
 .login-note{padding:0 12px 12px 12px}
 .sign-in-button{margin-top:10px;cursor:pointer}
 .tweets-header{padding:0 0 6px 12px;border-bottom:1px solid #e8e8e8}
