--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -1,9 +1,9 @@
 @import 'nib'
 
-black = #000
-lightblack = #333
-gray = #999
-white = #fff
+$black = #000
+$lightblack = #333
+$gray = #999
+$white = #fff
 
 *
   box-sizing: border-box
@@ -18,7 +18,7 @@ body
   border: 1px solid rgba(0, 0, 0, .1)
   border-radius: 6px
   border-top-left-radius: 13
-  background-color: white
+  background-color: $white
   background-clip: padding-box
 
 .avatar
@@ -32,9 +32,6 @@ body
 .size32
   width: 32px
   height: 32px
-
-.username
-  color: gray
 
 .navbar-fixed-top .container, .navbar-fixed-bottom .container, .container
   width: 885px
@@ -106,7 +103,7 @@ h1
     font-size: 14px
   &-metadata
     font-size: 11px
-    color: gray
+    color: $gray
 
 .stats
   margin: 0
@@ -121,7 +118,7 @@ h1
     font-size: 10px
     line-height: 16px
     text-transform: uppercase
-    color: gray
+    color: $gray
     border: solid #e8e8e8
     border-width: 0 1px 0 0
     &:first-child
@@ -131,7 +128,7 @@ h1
     strong
       display: block
       font-size: 14px
-      color: lightblack
+      color: $lightblack
 
 .status
   padding: 12px
@@ -142,7 +139,7 @@ h1
   &-text
     padding: 10px
   &-character-count
-    color: gray
+    color: $gray
     &-invalid
       color: #b83535
 
@@ -166,11 +163,14 @@ h1
   &-content
     margin-left: 58px
   &-author-full-name
-    color: lightblack
+    color: $lightblack
   &-author-username
-    color: gray
+    color: $gray
   &-text
     -webkit-margin-after: 0
     word-wrap: break-word
   &-footer
     overflow: hidden
+    color: $gray
+    a, a:visited
+      color: $gray
