--- a/app/views/templates/tweet.hbs
+++ b/app/views/templates/tweet.hbs
@@ -8,5 +8,14 @@
     </a>
   </header>
   <p class="tweet-text">{{#auto_link}}{{text}}{{/auto_link}}</p>
-  <footer class="tweet-footer"></footer>
+  <footer class="tweet-footer">
+    <a href="http://twitter.com/{{user.screen_name}}/status/{{id_str}}">
+      <time datetime="{{created_at}}">
+        {{#format_date}}{{created_at}}{{/format_date}}
+      </time>
+    </a>
+    {{#unless_source_is_web source}}
+      via <span class="tweet-client">{{{source}}}</span>
+    {{/unless_source_is_web}}
+  </footer>
 </div>
