Add retweeted functional.

--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -172,5 +172,7 @@ h1
   &-footer
     overflow: hidden
     color: $gray
-    a, a:visited
-      color: $gray
+  &-created-at, &-source > a
+    color: $gray
+  &-retweeter
+    margin-bottom: 0
