Move sidebar stats to separate view.

--- a/app/views/templates/sidebar.hbs
+++ b/app/views/templates/sidebar.hbs
@@ -8,11 +8,7 @@
 	    </div>
     </div>
   </div>
-  <ul class="stats">
-    <li class="stat-tweets"><strong>{{statuses_count}}</strong> tweets</li>
-    <li class="stat-following"><strong>{{friends_count}}</strong> following</li>
-    <li class="stat-followers"><strong>{{followers_count}}</strong> followers</li>
-  </ul>
+  <div class="stats-container" id="stats-container"></div>
   <div class="status-container" id="status-container"></div>
 {{else}}
   <div class="app-description">
